# bazel-argocd-grpc-example

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  docker-compose.yml  go.mod  go.sum
argocd/apps/user/cert-manager/: config_dir.json
argocd/apps/user/ftb/: config_dir.json
argocd/apps/user/istio/: config_dir.json
argocd/apps/user/monitoring/: config_dir.json
argocd/apps/user/redis/: config_dir.json
argocd/apps/user/redpanda/: config_dir.json
argocd/apps/user/traefik/: config_dir.json
argocd/apps/user/umbrella/: config_dir.json
argocd/bootstrap/: argo-cd.yaml  cluster-resources.yaml  root.yaml
argocd/projects/: cert-manager.yaml  ftb.yaml  istio.yaml  monitoring.yaml  redis.yaml  redpanda.yaml  traefik.yaml  umbrella.yaml
argocd/user/apps/cert-manager/: cert-manager-crds.yaml  cert-manager.yaml  cluster-issuer.yaml
argocd/user/apps/ftb/: ftb-stage.yaml  values.yaml
argocd/user/apps/istio/: istio.yaml
argocd/user/apps/monitoring/: kube-prometheus-stack.yaml
argocd/user/apps/redis/: redis.yaml
argocd/user/apps/redpanda/: redpanda.yaml
argocd/user/apps/traefik/: traefik.yaml
argocd/user/apps/umbrella/: umbrella.yaml
argocd/user/manifests/cert-manager-crds/: kustomization.yaml
argocd/user/manifests/cluster-issuer/: cluster-issuer.yaml
argocd/user/manifests/istio/: kustomization.yaml  patch-cm.yaml  values.yaml
argocd/user/manifests/umbrella/: authorizationpolicy.yaml  authorizationprovider.yaml  envoyfilter.yaml  gateway.yaml  ingressroute.yaml  kustomization.yaml  namespace.yaml  values.yaml  virtualservice.yaml
helm/service-template/: Chart.yaml  values.yaml
helm/service-template/templates/: NOTES.txt  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/umbrella/: Chart.yaml  values.yaml
pkg/config/: BUILD.bazel  config.go
services/service-a/api/v1/: BUILD.bazel  service-a.proto
services/service-a/cmd/: BUILD.bazel  config.go  main.go
services/service-a/internal/server/: BUILD.bazel  server.go
services/service-b/api/v1/: BUILD.bazel  service-b.proto
services/service-b/cmd/: BUILD.bazel  config.go  default-config.yml  main.go
services/service-b/internal/server/: BUILD.bazel  index.html.tmpl  server.go
services/service-c/cmd/: BUILD.bazel  config.go  default-config.yml  main.go
services/service-c/internal/server/: BUILD.bazel  server.go
