load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")
load("@gazelle//:def.bzl", "gazelle")
load("//build:defs.bzl", "containers_bundle", "containers_push")

# gazelle:prefix github.com/mrdan4es/bazel-argocd-grpc-example
# gazelle:proto package
# gazelle:proto_group go_package
# gazelle:go_grpc_compilers @rules_go//proto:go_proto,@rules_go//proto:go_grpc_v2
gazelle(name = "gazelle")

images = dict({
    "mrdan4es/bazel-argocd-grpc-example/service-a": "//services/service-a/cmd",
    "mrdan4es/bazel-argocd-grpc-example/service-b": "//services/service-b/cmd",
    "mrdan4es/bazel-argocd-grpc-example/service-c": "//services/service-c/cmd",
})

expand_template(
    name = "tags_stamped",
    out = "_stamped.tags.txt",
    stamp_substitutions = {"latest": "{{BUILD_EMBED_LABEL}}"},
    template = ["latest"],
)

containers_bundle(
    name = "bundle",
    images = images,
    registry = "local",
)

containers_push(
    name = "push",
    images = images,
    registry = "ghcr.io",
    remote_tags = ":tags_stamped",
)
