module(name = "bazel-argocd-grpc-example")

bazel_dep(name = "aspect_bazel_lib", version = "2.20.0")
bazel_dep(name = "gazelle", version = "0.44.0")
bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "rules_multirun", version = "0.12.0")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "toolchains_protoc", version = "0.4.3")

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    version = "v31.1",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_envoyproxy_go_control_plane", "com_github_go_viper_mapstructure_v2", "com_github_rs_zerolog", "com_github_spf13_pflag", "com_github_spf13_viper", "org_golang_google_grpc")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base_debian12",
    digest = "sha256:125eb09bbd8e818da4f9eac0dfc373892ca75bec4630aa642d315ecf35c1afb7",
    image = "gcr.io/distroless/base-debian12",
    platforms = [
        "linux/amd64",
    ],
)
use_repo(oci, "distroless_base_debian12", "distroless_base_debian12_linux_amd64")
