load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "v1_apb_proto",
    srcs = ["service-a.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "v1_apb_go_proto",
    compilers = [
        "@rules_go//proto:go_proto",
        "@rules_go//proto:go_grpc_v2",
    ],
    importpath = "github.com/mrdan4es/bazel-argocd-grpc-example/services/service-a/api/v1",
    proto = ":v1_apb_proto",
    visibility = ["//visibility:public"],
)
