load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "v1_bpb_proto",
    srcs = ["service-b.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "v1_bpb_go_proto",
    compilers = [
        "@rules_go//proto:go_proto",
        "@rules_go//proto:go_grpc_v2",
    ],
    importpath = "github.com/mrdan4es/bazel-argocd-grpc-example/services/service-b/api/v1",
    proto = ":v1_bpb_proto",
    visibility = ["//visibility:public"],
)
