load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    embedsrcs = ["index.html.tmpl"],
    importpath = "github.com/mrdan4es/bazel-argocd-grpc-example/services/service-b/internal/server",
    visibility = ["//services/service-b:__subpackages__"],
    deps = [
        "//services/service-a/api/v1:v1_apb_go_proto",
        "@com_github_rs_zerolog//:zerolog",
    ],
)
