load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/mrdan4es/bazel-argocd-grpc-example/services/service-c/internal/server",
    visibility = ["//services/service-c:__subpackages__"],
    deps = [
        "@com_github_envoyproxy_go_control_plane//envoy/config/core/v3:core",
        "@com_github_envoyproxy_go_control_plane//envoy/service/auth/v3:auth",
        "@com_github_envoyproxy_go_control_plane//envoy/type/v3:type",
        "@com_github_rs_zerolog//:zerolog",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
